# swagger.yaml
@@ -5,12 +5,7 @@ paths:
       operationId: UserController_register
       summary: Endpoint para cadastro de novo usuário
       description: Endpoint para cadastro de novo usuário
-      parameters:
-        - name: authorization_token
-          in: header
-          required: true
-          schema:
-            type: string
+      parameters: []
       requestBody:
         required: true
         content:
